--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,6 +1,6 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/images/*.{png,jpg,gif,svg}", "/assets/*"]
+    "exclude": ["/images/*", "/assets/*"]
   }
 }
