feat: Playwright E2E testing with screenshots (#30, #31, #32, #33, #34)

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ yarn-error.log*
 
 # GitHub agents config (managed separately)
 .github/agents/
+
+# Playwright
+test-results/
+playwright-report/
+e2e/screenshots/
